--- a/backend/reactdjango/static/search_property_on_sale.css
+++ b/backend/reactdjango/static/search_property_on_sale.css
@@ -59,6 +59,23 @@ a{
     align-items: center;
     text-align: center;
 }
+
+#scrollToTopBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button 20px from the bottom */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it's on top of other content */
+    font-size: 18px; /* Increase font size */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #333; /* Black background color */
+    color: white; /* White text color */
+    cursor: pointer; /* Add a pointer cursor on hover */
+    padding: 15px; /* Add some padding */
+    border-radius: 10px; /* Rounded corners */
+  }
+
 @media (max-width: 768px) {
     .main-container{
         width: 100%;
