--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -98,7 +98,9 @@
             {% endfor %}
             {% endif %}
         </div>
-      
+    <button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
+
+    <script src="{% static 'home-btn.js'%}"></script>  
     </div>
     {% endblock %}
 </body>
