--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -19,16 +19,22 @@
             </div>
         </div>
         <div class="link-container">
-            <ul>
-                <li><a href="/developer-profile">Profile</a></li>
-                <li><a href="">Houses</a></li>
-                <li><a href="/post_rentals">Post house</a></li>
-                <li><a href="/sell_property">Sell property</a></li>
-            </ul>
-        </div>
+            <div class="left-container">
+                <ul>
+                    <li><a href="/developer-profile">Profile</a></li>
+                    <li><a href="">Houses</a></li>
+                    <li><a href="/post_rentals">Post house</a></li>
+                    <li><a href="/sell_property">Sell property</a></li>
+                </ul>
 
-       
-        
+                <a href="/logout">
+                    <div class="log-out">
+                        <p>Logout</p>
+                    </div>
+                </a>
+            </div>
+            
+        </div>
     
     {% block content%}    
     {% endblock%}
