--- a/backend/reactdjango/static/sellproperty.css
+++ b/backend/reactdjango/static/sellproperty.css
@@ -12,3 +12,27 @@ textarea{
     height: 60px;
     display: block;
 }
+button{
+    background-color: rgb(7, 4, 19);
+    color: white;
+    width: 30%;
+    height: 30px;
+    border: none;
+}
+@media (max-width: 768px) {
+    .sell-property{
+        width: 68%;
+        margin-left: 0;
+    }
+    p{
+        margin-bottom: 15px;
+    }
+    textarea{
+        height: 60px;
+        width: 90%;
+        display: block;
+    }
+    button{
+        width: 60%;
+    }
+}
