--- a/backend/reactdjango/templates/Profile.html
+++ b/backend/reactdjango/templates/Profile.html
@@ -29,12 +29,15 @@
                     </div>
                     
                 </div>
-    
-                <p><span>First name</span> : {{developer.name}}</p>
-                <p><span>Last name</span> : {{developer.name}}</p>
-                <p><span>Email</span> : {{developer.email}}</p>
-                <p><span>Id Number</span> : {{developer.id_number}}</p>
-                <p><span>Number of Houses</span> : {{developer.email}}</p>
+
+                <div class="profile-credentials">
+                    <p><span>First name</span> : {{developer.name}}</p>
+                    <p><span>Last name</span> : {{developer.name}}</p>
+                    <p><span>Email</span> : {{developer.email}}</p>
+                    <p><span>Id Number</span> : {{developer.id_number}}</p>
+                    <p><span>Number of Houses</span> : {{developer.email}}</p>
+                </div>
+                
             </div>
             
 
