--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -12,7 +12,7 @@
     <div class="main-container">
         <div class="header">
             <div class="logo">
-                <h2>JEFF</h2>
+                <img src="{% static 'images/realestatelogo.png' %}" alt="">
             </div>
             <div class="greet">
                 <h4>welcome {{developer.name}}</h4>
@@ -29,7 +29,7 @@
 
                 <a href="/logout">
                     <div class="log-out">
-                        <p>Logout</p>
+                         <span>Logout</span>
                     </div>
                 </a>
             </div>
