--- a/backend/reactdjango/templates/header.html
+++ b/backend/reactdjango/templates/header.html
@@ -21,13 +21,13 @@
             <div class="btn">
                 <a href="/buy_property">
                     <div class="buy-property">
-                         Buy Property
+                         <span>Buy Property</span>
                     </div>
                 </a>
     
                <a href="/view_property">
                     <div class="rent-property">
-                        Rentals
+                        <span>Rentals</span>
                     </div>
                 </a>
             </div>
