--- a/backend/reactdjango/static/developer.css
+++ b/backend/reactdjango/static/developer.css
@@ -7,7 +7,7 @@
 .header{
     background-color: rgb(7, 4, 19);
     width: 100%;
-    height: 50px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     color: white;
@@ -17,13 +17,17 @@
 .logo{
     margin-left: 20px;
 }
+.logo img{
+    width: 25%;
+    
+}
 .greet{
     margin-right: 40px;
 }
 .link-container{
     width: 20%;
     background-color: rgb(7, 4, 19);
-    height: 100vh;
+    height: 170vh;
     display: inline-block;
     
     border-top: 1px solid white;
@@ -32,7 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 80%;
+    height: 46%;
 }
 .content-container{
     width: 50%;
@@ -61,7 +65,7 @@
     justify-content: center;
     border-radius: 5px;
 }
-.log-out p{
+.log-out span{
     color: black;
     font-weight: bold;
 }
@@ -73,6 +77,32 @@ a {
     background-color: red;
    
 }
-.log-out:hover p{
+.log-out:hover span{
     color: white;
+}
+@media (max-width: 768px) {
+
+    .header{
+        height: 60px;
+    }
+
+    .logo{
+        margin-left: 5px;
+        width: 20%;
+    }
+    .logo img{
+       width: 60%;
+    }
+    .greet{
+        margin-right: 8px;
+    }
+    .link-container{
+        width: 30%;
+        height: 180vh;
+    }
+   
+
+    .log-out{
+        width: 80%;
+    }
 }
