--- a/backend/reactdjango/static/register.css
+++ b/backend/reactdjango/static/register.css
@@ -67,6 +67,10 @@ input[type=submit]{
         width: 100%;
         margin-bottom: 0;
         margin-top: 0;
+        height: 100vh;
+    }
+    .user-credentials input{
+        height: 20px;
     }
 
 
