--- a/backend/reactdjango/static/header.css
+++ b/backend/reactdjango/static/header.css
@@ -51,14 +51,46 @@ footer{
     width: 100%;
     background-color: rgb(41, 38, 38);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
     bottom: 0;
-    height: 35vh;
+    height: 55vh;
 }
+.quick-links-logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.social-media{
+    
+    width: 90%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social-links{
+    display: flex;
+    justify-content: space-between; 
+    width: 40%;
+}
+.social-links a{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social-links a img{
+    width: 30%;
+}
+
 .logo{
-    margin-left: 20px;
+   
     color: white;
     
 }
@@ -105,7 +137,7 @@ footer{
         margin-right: 10px;
     }
     footer{
-        height: 20vh;
+        height: 30vh;
     }
     .logo{
         margin-left: 5px;
@@ -137,6 +169,18 @@ footer{
     }
     .support{
         margin-right: 5px;
+    }
+    .quick-links-logo{ 
+        width: 100%;
+    }
+    .social-links{
+        width: 70%;
+    }
+    .social-links a{
+        width: 30%;
+    }
+    .social-links a img{
+        width: 40%;
     }
 }
 
