--- a/backend/reactdjango/static/on_sale_property_details.css
+++ b/backend/reactdjango/static/on_sale_property_details.css
@@ -83,11 +83,11 @@
 .google-map{
     width: 5%;
     background-color: white;
-    margin-bottom: 5px;
     float: right;
 }
 .google-map img{
     width: 100%;
+  
 }
 .property-in-the-area{
     margin-top: 10px;
@@ -159,23 +159,46 @@ a{
         width: 100%;
         height: auto;
     }
+
+    .about{
+        border-radius: 0;
+    }
+
     .about-property{
         width: 100%;
     }
     .about-property p{
         display: block;
         width: 95%;
-        margin: 7px;
+        padding: 7px;
+        margin: 0;
+        font-size: 16px;
     }
+    .google-map{
+        width: 10%;
+        float: initial;
+        background-color: rgb(38, 216, 38);
+        padding-bottom: 10px;
+    }
+   
     .Features {
         width: 100%;
         margin: 0;
     }
-    li{
-        margin-left: 5px;
+    
+    .Features ul li{
+        padding: 6px;
+        font-size: 15px;
     }
+    ul{
+        padding: 13px;
+        margin: 0;
+        padding-top: 5px;
+    }
+    
     h3{
         width: 95%;
+        font-size: 15px
     }
     .call-owner , .whatsapp-owner{
         height: 30px;
