--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -114,6 +114,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+.google-map{
+    width: 5%;
+    background-color: white;
+    float: right;
+}
+.google-map img{
+    width: 100%;
+  
+}
 p{
     margin: 5px;
 }
@@ -170,23 +179,46 @@ a{
         width: 100%;
         height: auto;
     }
+    .about{
+        border-radius: 0;
+        width: 100%;
+    }
     .about-house{
         width: 100%;
     }
     .about-house p{
         display: block;
-        margin: 7px;
+        padding: 7px;
+        margin: 0;
         width: 95%;
+        font-size: 16px;
     }
+    .google-map{
+        width: 10%;
+        float: initial;
+        background-color: rgb(38, 216, 38);
+        padding-bottom: 10px;
+    }
+   
     .Features {
         width: 100%;
         margin: 0;
     }
-    li{
+    
+    .Features ul li{
+        padding: 6px;
+        font-size: 15px;
         margin-left: 5px;
     }
+    ul{
+        padding: 13px;
+        margin: 0;
+        padding-top: 5px;
+    }
+   
     h3{
         width: 95%;
+        font-size: 15px
     }
     .call-landlord , .whatsapp-landlord{
         height: 30px;
