--- a/backend/reactdjango/templates/on_sale_property_details.html
+++ b/backend/reactdjango/templates/on_sale_property_details.html
@@ -55,7 +55,7 @@
         {% if features_list %}
         
         <div class="Features">
-            <h3 style="text-align: center; text-decoration: underline;">Features</h3>
+            <h3 style="text-align: center;">Features</h3>
             <ul>
                 {% for features in features_list %}
                 <li>{{features}}</li>
