--- a/backend/reactdjango/templates/rentaldetails.html
+++ b/backend/reactdjango/templates/rentaldetails.html
@@ -38,12 +38,20 @@
                 <p>Deposit : {{rental.deposit}}</p>
                 <p>Water cost : {{rental.water_fee}}</p>
                 <p>Garbage cost : {{rental.garbage_fee}}</p>
+
+                <a href="{{on_sale_property.pin_location}}" target="_blank">
+                    <div class="google-map">
+                        <img src="{% static 'images/googlemapslogo.webp' %}" alt="googlemaps">
+                        
+                    </div>
+                   
+                </a>
             </div>
         </div>
         {% if features_list %}
         
         <div class="Features">
-            <h3 style="text-align: center; text-decoration: underline;">Features</h3>
+            <h3 style="text-align: center;">Features</h3>
             <ul>
                 {% for features in features_list %}
                 <li>{{features}}</li>
