--- a/backend/reactdjango/static/buyproperty.css
+++ b/backend/reactdjango/static/buyproperty.css
@@ -99,7 +99,8 @@ p{
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(38, 216, 38);
+    border:  rgb(6, 5, 12);
+
     vertical-align: top;
    
 }
@@ -128,7 +129,8 @@ p{
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(38, 216, 38);
+    background-color: rgb(6, 5, 12);
+
     height: 43px;
     display: flex;
     justify-content: center;
