--- a/backend/reactdjango/static/on_sale_property_details.css
+++ b/backend/reactdjango/static/on_sale_property_details.css
@@ -29,7 +29,7 @@
 }
 .about{
     margin-top: 10px;
-    background-color: rgb(4, 221, 40);
+    background-color: rgb(6, 5, 12);
     width: 100%;
     border-radius: 3px;
 }
@@ -100,7 +100,7 @@
     border-top-right-radius: 5px;
     margin-bottom: 5px;
     margin-right: 5px;
-    border: 1px solid rgb(38, 216, 38)
+    border: 1px solid rgb(6, 5, 12);
     
    
 }
@@ -135,7 +135,7 @@ a{
     width: 100%;
     color: white;
     border: none;
-    background-color: rgb(38, 216, 38);
+    background-color: rgb(6, 5, 12);
     height: 43px;
     display: flex;
     justify-content: center;
