--- a/backend/reactdjango/static/rentaldetails.css
+++ b/backend/reactdjango/static/rentaldetails.css
@@ -29,7 +29,7 @@
 }
 .about{
     margin-top: 10px;
-    background-color: rgb(6, 5, 12);;
+    background-color: rgb(10, 8, 20);
     width: 100%;
     border-radius: 3px;
 }
