--- a/backend/reactdjango/templates/developerpage.html
+++ b/backend/reactdjango/templates/developerpage.html
@@ -22,7 +22,7 @@
             <div class="left-container">
                 <ul>
                     <li><a href="/developer-profile">Profile</a></li>
-                    <li><a href="">Houses</a></li>
+                    <li><a href="/developer_properties">Properties</a></li>
                     <li><a href="/post_rentals">Post house</a></li>
                     <li><a href="/sell_property">Sell property</a></li>
                 </ul>
