--- a/backend/reactdjango/templates/rental-edit.html
+++ b/backend/reactdjango/templates/rental-edit.html
@@ -8,28 +8,26 @@
 <body>
     <div class="main-container">
       
-        <form action="/edit_property/{{property.id}}" method="POST" enctype="multipart/form-data">
+        <form action="/edit_rental/{{property_for_renting.id}}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
            
            
-            <p>apartment name</p> <input type="text" name="apartment_name" value="{{property_for_renting.apartment_name}}">
-            <hr>
-            <p>Size</p> <input type="text" name="size"  value="{{property_for_renting.size}}">
+            <p>apartment name</p> <input type="text" name="apartment_name" value="{{property_for_renting.apartment_name}}" required="false">
             <hr>
             
             <p>Features</p> 
             <textarea name="features" cols="30" rows="10">{{ property_for_renting.features }}</textarea>
             <hr>
-            <p>price</p> <input type="number" name="price" value="{{property_for_renting.price}}">
+            <p>price</p> <input type="number" name="price" value="{{property_for_renting.price}}"  required="false">
             <hr>
-            <p>deposit</p> <input type="number" name="deposit" value="{{property_for_renting.deposit}}">
+            <p>deposit</p> <input type="number" name="deposit" value="{{property_for_renting.deposit}}" required="false">
             <hr>
 
-            <p>water fee</p> <input type="number" name="water_fee" value="{{property_for_renting.water_fee}}">
+            <p>water fee</p> <input type="number" name="water_fee" value="{{property_for_renting.water_fee}}" required="false">
             <hr>
-            <p>garbage_fee</p> <input type="number" name="garbage_fee" value="{{property_for_renting.garbage_fee}}">
+            <p>garbage_fee</p> <input type="number" name="garbage_fee" value="{{property_for_renting.garbage_fee}}" required="false">
             <hr>
-           <p>contact</p> <input type="text" name="contact" value="{{property_for_renting.landlord_contact}}">
+           <p>contact</p> <input type="text" name="contact" value="{{property_for_renting.landlord_contact}}" required="false">
             <hr>
             <input class="save" type="submit" value="save">
             <hr>
