--- a/backend/reactdjango/templates/on-sale-edit.html
+++ b/backend/reactdjango/templates/on-sale-edit.html
@@ -1,9 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'on-sale-edit.css' %}">
+    <title>J.L.C limited</title>
 </head>
 <body>
     <div class="main-container">
@@ -11,19 +14,31 @@
         <form action="/edit_property/{{property_on_sale.id}}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
         
-            <p>Features</p> 
-            <textarea name="features" cols="30" rows="10">{{ property_on_sale.features }}</textarea>
-            <hr>
-            <p>price</p> <input type="number" name="price" value="{{property_on_sale.price}}">
-            <hr>
-            <p>payment_process</p> 
-            <textarea name="payment_process" cols="30" rows="10">{{property_on_sale.payment_process}}</textarea>
+            <span>Features</span> 
+            <textarea name="features" >{{ property_on_sale.features }}</textarea>
+            
            
-            <hr>
-            <p>contact</p> <input type="text" name="contact" value="{{property_on_sale.contact}}">
-            <hr>
+          
+            <span>Price</span> 
+            <input type="number" name="price" value="{{property_on_sale.price}}">
+            
+
+        
+            <span>Deposit</span> 
+            <input type="number" name="deposit" value="{{property_on_sale.deposit}}">
+           
+
+            
+            <span>Payment process</span> 
+            <textarea name="payment_process" >{{property_on_sale.payment_process}}</textarea>
+           
+            
+           
+            <span>Contact</span> 
+            <input type="text" name="contact" value="{{property_on_sale.contact}}">
+           
             <input class="save" type="submit" value="save">
-            <hr>
+            
       
         </form>
         
