--- a/backend/reactdjango/templates/on_sale_property_details.html
+++ b/backend/reactdjango/templates/on_sale_property_details.html
@@ -33,11 +33,9 @@
         
             <div class="about-property">
                 <p>Property type : {{on_sale_property.property_type}}</p>
-                <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{on_sale_property.location}}</p>
-                
+                <p><i class="fa fa-map-marker" aria-hidden="true"></i> {{on_sale_property.location}}</p>             
                 <p>Price : ksh {{on_sale_property.price|intcomma }}</p>
-
-                
+                <p>deposit : ksh {{on_sale_property.deposit|intcomma }}</p>
                 <p>payment_process : {{on_sale_property.payment_process}}</p>
                 {% if on_sale_property.pin_location %}
 
