--- a/backend/reactdjango/static/developer-properties.css
+++ b/backend/reactdjango/static/developer-properties.css
@@ -1,9 +1,15 @@
+.main-container{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 table {
     border-collapse: collapse;
     width: 99%;
     border: 1px solid #ec8080;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     margin-left: 5px;
 }
 th, td {
@@ -25,4 +31,50 @@ background-color: #c77070;
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+}
+a{
+    text-decoration: none;
+}
+.edit{
+    color: green;
+    font-weight: bold;
+}
+.delete{
+    color: red;
+    font-weight: bold;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
